fix z-index issue

--- a/assets/stylesheets/prototype/components/_certify-nav.scss
+++ b/assets/stylesheets/prototype/components/_certify-nav.scss
@@ -80,6 +80,7 @@
     position: absolute;
     top: 0;
     width: 100%;
+    z-index: 500;
   }
 }
 
